--- a/src/Makefile
+++ b/src/Makefile
@@ -2,17 +2,20 @@ VERSION=1.0.0
 
 CC=gcc
 
-DEBUG_FLAGS=-Wall -Wpedantic -Werror
+DEBUG_FLAGS=-Wall -Werror
 
 CFLAGS=-g -fPIC $(DEBUG_FLAGS)
 
-libslater.so: slater_condon.o
+OBJ=core.o simple.o
+
+
+libslater.so: $(OBJ)
 	$(CC) $(CFLAGS) *.o -fPIC -shared -Wl,-soname,libslater.so.1 -o libslater.so.$(VERSION) -lc
-	ln -s libslater.so.$(VERSION) libslater.so
-	ln -s libslater.so.$(VERSION) libslater.so.1
+	rm -f libslater.so ; ln -s libslater.so.$(VERSION) libslater.so
+	rm -f libslater.so.1 ; ln -s libslater.so.$(VERSION) libslater.so.1
 
 %.o: %.c slater_condon.h
-	$(CC) $(CFLAGS) slater_condon.c -c
+	$(CC) $(CFLAGS) $< -c
 
 test: test.c libslater.so
 	$(CC) $(CFLAGS) test.c -lslater -L. -o test -Wl,-rpath=.
