--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,15 @@ pkgconfig_DATA = pkgconfig/slaterlib.pc
 src_main_c = src/core.c src/debug.c src/simple.c src/test.c
 src_main_h = src/slater_condon.h src/slater_condon_simple.h src/debug.h
 
+main_test_c = src/test.c
+
+bin_PROGRAMS = $(top_builddir)/bin/test
+__top_builddir__bin_test_SOURCES   = $(main_test_c) $(src_main_h)
+__top_builddir__bin_test_CFLAGS    = $(AM_CFLAGS)
+__top_builddir__bin_test_CPPFLAGS  = "-I${top_srcdir}/src"
+__top_builddir__bin_test_CPPFLAGS += "-I${top_srcdir}/include"
+__top_builddir__bin_test_LDFLAGS   = -version-info 0:0:0 -lslater
+
 lib_LTLIBRARIES = lib/libslater.la
 include_HEADERS = $(src_main_h)
 lib_libslater_la_SOURCES = $(src_main_c) $(src_main_h)
