Update compilation of test.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,17 +8,12 @@ VERSION_PATCH   = @VERSION_PATCH@
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = pkgconfig/slaterlib.pc
 
+TEST = test
+
 src_main_c = src/core.c src/debug.c src/simple.c src/test.c
 src_main_h = src/slater_condon.h src/slater_condon_simple.h src/debug.h
 
-main_test_c = src/test.c
-
-bin_PROGRAMS = $(top_builddir)/bin/test
-__top_builddir__bin_test_SOURCES   = $(main_test_c) $(src_main_h)
-__top_builddir__bin_test_CFLAGS    = $(AM_CFLAGS)
-__top_builddir__bin_test_CPPFLAGS  = "-I${top_srcdir}/src"
-__top_builddir__bin_test_CPPFLAGS += "-I${top_srcdir}/include"
-__top_builddir__bin_test_LDFLAGS   = -version-info 0:0:0 -lslater
+test_SOURCES = src/test.c
 
 lib_LTLIBRARIES = lib/libslater.la
 include_HEADERS = $(src_main_h)
@@ -27,3 +22,6 @@ lib_libslater_la_CFLAGS = $(AM_CFLAGS)
 lib_libslater_la_CPPFLAGS = "-I${top_srcdir}/src"
 lib_libslater_la_CPPFLAGS += "-I${top_srcdir}/include"
 lib_libslater_la_LDFLAGS = -version-info 0:0:0
+
+check_PROGRAMS = test
+test_LDFLAGS = "${top_builddir}/lib/libslater.la"
